syntax = "proto3";

package binpocket.manifest;

// Tags for a given repository. Points
// to a list of 'tag references' that
// reference manifest content addresses.
//
// For example:
// 'latest' might point to a manifest with 'sha256:123...'
// 'v1.23' might also point to the same manifest, or a different one.
//
message RepositoryTags {
    // The name of the repository.
    string repository = 1;

    // Tags -> Manifest mapping.
    repeated TagReference tag_references = 2;
}

message TagReference {
    // The name of the repository tag. EG - 'latest', or 'v1.234'
    string tag_name = 1;

    // The content addressable digest of the manifest.
    string manifest_digest = 2;
}

